# NoteLab

./: .gitignore  DESCRIPTION.md  README.md  pyproject.toml
data/: database.db
res/: endpoints.yml  flask_defaults.txt  paths.txt
scripts/: database_setup.sh  flask_config.sh  gen_ssl_certificate.sh  generate_readme.py  maintenance.sh  notice.txt  run.sh  run_flask.sh  run_tests.sh  set_default_envs.sh  set_env_var.sh  setup.sh  update_dependencies.sh  update_package_name.sh
scripts/bash/config/: dependencies.sh  flask.sh  package.sh  poetry.sh
scripts/bash/config/dotenv/: set_default.sh  setup.sh
scripts/bash/config/env/: active.sh  deactivate.sh
scripts/bash/run/: flask.sh  main.sh  maintenance.sh  tests.sh
scripts/bash/setup/: database.sh  setup.sh  ssl_cert.sh
scripts/bash/setup/env/: conda.sh  setup.sh  venv.sh
scripts/python/: generate_readme.py
src/notelab/: __init__.py
src/notelab/app/: __init__.py  app.py
src/notelab/app/api/: database_api.py
src/notelab/app/routes/: db_routes.py  swagger.py
src/notelab/app/routes/db/: table_routes.py
src/notelab/db/: connection_handler.py  db_handler.py  messages.json  row_handler.py  table_handler.py  utils.py
src/notelab/utils/: app_config.py
tests/notelab/: app_test.py
utils/: app_config.py  app_logger.py
