[project]
name = "notelab"
version = "0.3.0"
description = "An experimental full-stack Python application for data science and ML."
authors = [{name = "Sara Garcia", email = "saragarcia6123@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "toml (>=0.10.2,<0.11.0)"
]
dev-dependencies = [
    "pytest",
    "pytest-cov",
    "pytest-env",
    "pytest-flask",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[poetry.scripts]
notelab = "notelab.app:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests/notelab"]
python_files = ["*_test.py"]

[pytest]
pythonpath = 'src'
env_files = '.env'
